Made the search and install a little friendlier.

--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="https://___.git" id="repository" name="repository">
                 <div class="input-group-append">
-                    <input type="submit" class="btn btn-primary" value="Add">
+                    <input type="submit" id="addbutton" class="btn btn-primary" value="Add">
                 </div>
             </div>
         </form>
